[gd_scene load_steps=18 format=2]

[ext_resource path="res://Sprites/Mobile - Pocket Mortys - 076 Robot Morty.png" type="Texture" id=1]
[ext_resource path="res://Scenas/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/pedo.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 984, 131, 164 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 131, 984, 131, 164 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 262, 984, 131, 164 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 393, 984, 131, 164 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 820, 131, 164 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 131, 820, 131, 164 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 262, 820, 131, 164 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 393, 820, 131, 164 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 656, 131, 164 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "espalda",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "lado",
"speed": 6.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": false,
"name": "frente",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=11]
radius = 49.79
height = 17.7122

[sub_resource type="Gradient" id=12]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=13]
gradient = SubResource( 12 )

[sub_resource type="ParticlesMaterial" id=14]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.2
color_ramp = SubResource( 13 )

[node name="player" type="Area2D"]
position = Vector2( 325.712, 456.919 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
Velocidad = 400

[node name="SpritePlayer" type="AnimatedSprite" parent="."]
frames = SubResource( 10 )
animation = "frente"
playing = true

[node name="CollisioPlayer" type="CollisionShape2D" parent="."]
position = Vector2( 3.79587, 22.4832 )
shape = SubResource( 11 )
one_way_collision_margin = 100.0

[node name="Pedo" type="Particles2D" parent="."]
show_behind_parent = true
position = Vector2( -17.5826, 60.7003 )
amount = 10
lifetime = 0.3
local_coords = false
process_material = SubResource( 14 )
texture = ExtResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_player_body_entered"]
